test/suites/fail-lower/L-017.expected
  × One or more errors occured.

Error: L-017

  × Unknown operator: +++
   ╭─[L-017.pol:3:27]
 2 │ 
 3 │ let f(x: Bool) : Bool { x +++ x}
   ·                           ───
   ╰────
