test/suites/fail-lower/L-017.pol
data Bool { T, F }

let f(x: Bool) : Bool { x +++ x}